--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.board-container{
+  height: 250px;
+  width: 250px;
+  background-color: rgb(183, 180, 180);
+  border-radius: 20px;
+  margin: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.board-row{
+  height: 34%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.square{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 33%;
+  border-right: 2px solid white;
+  border-bottom: 2px solid white;
+  cursor: pointer;
+}
+
+.play-again-btn{
+  margin: 20px;
+  padding:10px 20px;
+  border-radius: 10px;
+  width: 150px;
+  cursor: pointer;
 }
